2002-08-16 auselton
	* Chris tells me he updated the date format in the "make rpm"
	  target stuff.
	* icebox.dev's script for PM_UPDATE_NODES now allows for a node
	  status of "2" (== "unavailable") in its expect.  This is in 
	  keeping with the change to the protocol in V3.0 of the icebox
	  firmware.
	* device.c (do_target_some) had a bug similar to that addressed 
	  by Gregg Hommes above.  If a plug does not have a node plugged
	  into it then a) it should be skipped when trying to determine
	  the targets for a device, and b) that is a sufficient condition 
	  for not using the "all" target on the device.

2002-08-14 garlick
	* Split baytech.dev into baytechF500.dev and baytechF501.dev.
 	  Our test baytech has the f/w rev F 5.00, and pengra baytechs have
	  rev F 5.01.  The latter prompts (Y/N)> after every power action.
	* Put back baytech.dev, documenting that prompting is configurable.

2002-08-10 hommes
	* Modify do_PMD_semantics() in device.c to set plug->node->p_state
	  and plug->node->n_state only if the plug is associated with node.
	  (previous behavior was assertion failure)
	* Modify loops in do_Device_semantics() in device.c to skip iteration
	  if variable interp->node is NULL. (previous behavior was assertion
	  failure)
	* Fix dump_Plug() function in device.c to print node name only if
	  variable plug->node is not NULL.
	* The match_Regex() function in device.c had duplicate tests for
	  "pmatch[0].rm_so == -1". Changed second one to
	  "pmatch[0].rm_se == -1"
	* Removed local variable <dev_com> which was set but never used in
	  do_Action() in action.c.  

2002-08-09 garlick
	* Sort hostlists before display in powerman.c
	* Comment out baytech password expect/send in baytech.dev.
	  Pengra doesn't use passwords.

2002-08-08 garlick
	* Make some char *'s into unsigned char *'s that are carrying
	  non-printable values such as \376 (baytech telnet telnet handshake)).
	* Redo telemetry logging to support callback at the Buffer level.